--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-inject": "^4.2.0",
-    "gulp-uglify": "^2.0.1",
-    "gulp-util": "^3.0.8"
+    "gulp-bundle-assets": "^2.27.1",
+    "gulp-copy": "^1.0.0",
+    "gulp-html-replace": "^1.6.2",
+    "gulp-strip-code": "^0.1.4"
   }
 }
